[package]
name = "tarpc-mqtt-transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

paho-mqtt = { version = "0.12.0", default-features = false }
tokio = { version = "1", features = ["full"] }
tarpc = { git = "https://github.com/axos88/tarpc.git", branch = "separate-client-and-server-context", features = ["serde1"] }
#tarpc = { git = "https://github.com/axos88/tarpc.git", branch = "add-anymap-to-context", features = ["serde1"] }
#anyhow = "*"
pin-project = "*"
futures = "0.3.26"
serde = "1.0.152"
serde_json = "1.0.93"
log = "*"
rc5 = "*"
cipher = { version = "0.4.3", features = ["zeroize"] }
rand = "*"
thiserror = "*"
actix = "*"
tracing = "*"
sha256 = "1.0.3"
byteorder = "1.5.0"

[dev-dependencies]
env_logger = "*"
paho-mqtt = { version = "0.12.0", features = ["bundled"] }
tarpc = { git = "https://github.com/axos88/tarpc.git", branch = "separate-client-and-server-context", features = ["serde1", "tokio1"] }


[[example]]
name = "simple"
